Fix CSS for Chrome on MacOS and Firefox with dark color scheme
Bad look of text entry boxes on Chrome/MacOS is fixed by removing
"webkit-appearance: textarea".

Unreadable text on Firefox with dark scheme is fixed by forcing text
color to black.

Bug: T205431

--- a/modules/SplitTwoColConflict/ext.TwoColConflict.Split.editable.less
+++ b/modules/SplitTwoColConflict/ext.TwoColConflict.Split.editable.less
@@ -11,6 +11,7 @@
 		-moz-box-shadow: none;
 		box-shadow: none;
 		background: transparent;
+		color: #000;
 	}
 
 	.mw-twocolconflict-split-editor:focus {
@@ -58,7 +59,6 @@
 		word-wrap: break-word;
 		overflow-wrap: break-word;
 		-moz-appearance: textfield-multiline;
-		-webkit-appearance: textarea;
 		-webkit-user-select: text;
 		font: medium '-moz-fixed';
 		font: '-webkit-small-control';
